Edited readme and sql